--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <div class="c-nav">
+        <div class="c-nav__gnb-wrap">
+            <ul class="c-nav__gnb">
+                <li class="c-nav__gnb-list"><a href="#" class="c-txt-move">about</a></li>
+                <li class="c-nav__gnb-list"><a href="#" class="c-txt-move">misson</a></li>
+                <li class="c-nav__gnb-list"><a href="#" class="c-txt-move">work</a></li>
+                <li class="c-nav__gnb-list"><a href="#" class="c-txt-move">shop</a></li>
+            </ul>
+        </div>
+        <div class="c-nav__date"></div>
+        <div class="c-nav__lang"></div>
+    </div>
 </body>
 </html>
