--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css"></link>
     <title>Document</title>
 </head>
+<style>
+    .c-nav {
+        display: flex;
+        position: fixed;
+        top:0;
+        left: 0;
+        width: 100%;
+        padding: 41rem 49rem;
+        justify-content: space-between;
+
+    }
+    .c-nav__gnb {
+        display: flex;
+    }
+    .c-nav__gnb-list {
+        margin-right: 31rem;
+    }
+    .c-nav__date {
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin-top: 10rem;
+        font-style: 18rem;
+        text-align: center;
+        line-height: 20rem;
+    }
+    .c-top {
+        position: fixed;
+        right: 48rem;
+        bottom: 45rem;
+        font-size: 18rem;
+        line-height: 1.8205vw;
+        z-index: 100;
+    }
+</style>
 <body>
     <div class="c-nav">
         <div class="c-nav__gnb-wrap">
@@ -18,6 +55,23 @@
         </div>
         <div class="c-nav__date"></div>
         <div class="c-nav__lang"></div>
+    </div>
+    <div class="l-page-wrap">
+
+    </div>
+    <div class="c-top">
+       <a class="c-top__btn" href="#">
+            <div class="c-txt-move"><span>TOP ↑</span></div>
+       </a> 
+    </div>
+
+    <div class="c-footer">
+        <div class="c-footer__copyright">
+
+        </div>
+        <div class="c-footer__address">
+            <span></span>
+        </div>
     </div>
 </body>
 </html>
